tests/baselines/reference/commentsMultiModuleMultiFile.errors.txt
==== tests/cases/compiler/commentsMultiModuleMultiFile_1.ts (0 errors) ====
    import m = require('commentsMultiModuleMultiFile_0');
    /** this is multi module 3 comment*/
    module multiM {
        /** class d comment*/
        export class d {
        }
    
        /// class f comment
        export class f {
        }
    }
    new multiM.d();
==== tests/cases/compiler/commentsMultiModuleMultiFile_0.ts (1 errors) ====
    
    /** this is multi declare module*/
    export module multiM {
        /// class b comment
        export class b {
        }
    }
    /** thi is multi module 2*/
    module multiM {
           ~~~~~~
!!! commentsMultiModuleMultiFile_0.ts(9,8): error TS2192: All declarations of merged declaration 'multiM' must be exported or not exported.
        /** class c comment*/
        export class c {
        }
    
        // class e comment
        export class e {
        }
    }
    
    new multiM.b();
    new multiM.c();
    